deployment/k8s/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-service
spec:
  type: LoadBalancer
  selector:
    app: portal
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
